ADD - routes of auth UPDATE - dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - DATABASE_DATABASE=${DATABASE_DATABASE}
 
       - TOKEN_ALGORITHM=${TOKEN_ALGORITHM}
+      - LIFETIME_AUTH=${LIFETIME_AUTH}
+      - LIFETIME_REFRESH=${LIFETIME_REFRESH}
 
       - PORT=8080
     volumes:
